# bean-circuit-api

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
bean_circuit_api/: asgi.py  settings.py  urls.py  wsgi.py
circuits/: admin.py  apps.py  models.py  schemas.py  services.py  urls.py  views.py
circuits/tests/: test_schemas.py  test_services.py
